# ASENA-ANALYSIS

./: .cursorrules  .dockerignore  .env.example  .gitignore  CHANGELOG.md  LEGAL.md  README.md  asena.py  pyproject.toml  requirements.lock.txt  requirements.txt
.github/: topics.txt
asena_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docker/: docker-compose.yml
scripts/: dvwa_sqli_lab_scenario.py  dvwa_sqli_pusat_sim.py  lock_requirements.py
src/: dashboard.py
src/engine/: __init__.py  correlator.py  ml_analyzer.py  parser.py  privacy_shield.py  tore_evaluator.py
src/rules/: hunting_rules.yaml  sqli_rules.yaml
src/utils/: __init__.py  exporter.py  metrics.py  notifier.py  privacy.py
